@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #ADD1B2
    ArrowColor #2A2A2A
    BorderColor #2A2A2A
}

class GoldenCompass {
  + run() : void
}

class InternshipStorage {
  - filePath: String
  + load() : ArrayList<Internship>
  + save(internshipList: InternshipList) : void
}

class InterviewStorage {
  - filePath: String
  + load(interviewList: InterviewList, internshipList: InternshipList) : void
  + save(interviewList: InterviewList) : void
}

class AliasStorage {
  - filePath: String
  + load(executor: Executor) : void
  + save(aliasMap: Map<String, String>) : void
}

class InternshipList {
  + findInternshipByCompanyAndRole(companyName: String, role: String) : Internship
}

class InterviewList {
}

class Executor {
  + addAlias(command: String, alias: String) : void
  + getAliasMap() : Map<String, String>
}

GoldenCompass --> "1" InternshipStorage
GoldenCompass --> "1" InterviewStorage
GoldenCompass --> "1" AliasStorage

InternshipStorage ..> "uses" InternshipList
InterviewStorage ..> "uses" InternshipList
InterviewStorage ..> "uses" InterviewList
AliasStorage ..> "uses" Executor
@enduml